<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.ntetz.android.nyannyanengine_android.util.NekosanExtensionKt" />

        <variable
            name="inputText"
            type="String" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/ContentsViewTheme">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittext_large"
                android:layout_marginStart="@dimen/middle_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:autofillHints="nekogoInput"
                android:background="@color/colorBackGroundVariant"
                android:gravity="start|top"
                android:hint="@string/post_input_original_text"
                android:inputType="textMultiLine"
                android:padding="@dimen/small_margin"
                android:text="@={inputText}"
                android:textColor="@color/onPrimary"
                app:layout_constraintEnd_toStartOf="@+id/dark_nyannya_sensei_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/dark_nyannya_sensei_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/middle_margin"
                android:contentDescription="@string/post_default_speaker_desc"
                android:src="@mipmap/ic_dark_nyannya_sensei_round"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/input" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/nekogoResult"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@android:color/holo_red_light"
            android:text="@{NekosanExtensionKt.toNyanNyan(inputText, context)}" />

        <Button
            android:id="@+id/testButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_button_name" />

    </LinearLayout>
</layout>
